extensions/bt-system-bundle/src/endpoints/excel-importer/services/__tests__/fixtures/invalid-files/malformed-xml.xlsx
<?xml version="1.0"?><worksheet><row><c>missing closing tags
